--- a/angular/projects/test-board/src/app/app.component.html
+++ b/angular/projects/test-board/src/app/app.component.html
@@ -9,4 +9,4 @@
     <td>{{result.message}}</td>
   </tr>
 </table>
-<button mat-raised-button onclick="addPost()">요청</button>
+<button mat-raised-button (click)="addPost()">요청</button>
